# vaidarcerto

star-bot/: .env.example  README.md  pyproject.toml  requirements.txt
star-bot/data/: schema.sql
star-bot/src/: bot.py
star-bot/src/cogs/economy/: daily.py  fish.py  rob.py  study.py  transfer.py  work.py
star-bot/src/cogs/misc/: ranking.py
star-bot/src/models/: user.py
star-bot/src/utils/: db.py  helpers.py
star-bot/tests/: test_economy.py
