[tool.poetry]
name = "star-bot"
version = "0.1.0"
description = "A Discord bot for managing an economy system."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
discord.py = "^2.0.0"
sqlite3 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"